{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 46,
  "lineage": "27b44a94-1119-118d-92ce-88ad974205a8",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e5a7cd9561f8ea9",
            "arn": "arn:aws:ec2:us-east-2:024848461290:instance/i-05691a9d69b516484",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05691a9d69b516484",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-050b6038862d5d38b",
            "private_dns": "ip-10-0-1-11.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-3-137-165-65.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.165.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043c1dc79387af5f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01756e6eee92a3ff6",
            "tags": {
              "Name": "MyWebServer-0"
            },
            "tags_all": {
              "Name": "MyWebServer-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c0be7c4cab6e3cb"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-linux-2",
            "module.ec2.aws_security_group.rdp_instance",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e5a7cd9561f8ea9",
            "arn": "arn:aws:ec2:us-east-2:024848461290:instance/i-0403dbac268dbe0a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0403dbac268dbe0a6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ed8fa21bb2686db",
            "private_dns": "ip-10-0-2-126.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.126",
            "public_dns": "ec2-3-143-143-255.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.143.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-051ee21ff95beae94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f635e8910ddbffd",
            "tags": {
              "Name": "MyWebServer-1"
            },
            "tags_all": {
              "Name": "MyWebServer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c0be7c4cab6e3cb"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-linux-2",
            "module.ec2.aws_security_group.rdp_instance",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:024848461290:loadbalancer/app/my-alb/0347d20fb21be2c5",
            "arn_suffix": "app/my-alb/0347d20fb21be2c5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-598068037.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:024848461290:loadbalancer/app/my-alb/0347d20fb21be2c5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01c0be7c4cab6e3cb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f635e8910ddbffd"
              },
              {
                "subnet_id": "subnet-01756e6eee92a3ff6"
              }
            ],
            "subnets": [
              "subnet-00f635e8910ddbffd",
              "subnet-01756e6eee92a3ff6"
            ],
            "vpc_id": "vpc-0c486b5f49b5f51da",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.ec2.aws_security_group.rdp_instance",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:024848461290:listener/app/my-alb/0347d20fb21be2c5/7f6587dfaea98308",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:024848461290:targetgroup/my-target-group/8d77041ab08d97ad",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:024848461290:listener/app/my-alb/0347d20fb21be2c5/7f6587dfaea98308",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:024848461290:loadbalancer/app/my-alb/0347d20fb21be2c5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_lb.my_alb",
            "module.ec2.aws_lb_target_group.my_target_group",
            "module.ec2.aws_security_group.rdp_instance",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:024848461290:targetgroup/my-target-group/8d77041ab08d97ad",
            "arn_suffix": "targetgroup/my-target-group/8d77041ab08d97ad",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:024848461290:targetgroup/my-target-group/8d77041ab08d97ad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:024848461290:loadbalancer/app/my-alb/0347d20fb21be2c5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c486b5f49b5f51da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:024848461290:targetgroup/my-target-group/8d77041ab08d97ad-20240829231421913800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:024848461290:targetgroup/my-target-group/8d77041ab08d97ad",
            "target_id": "i-05691a9d69b516484"
          },
          "dependencies": [
            "data.aws_ami.amazon-linux-2",
            "module.ec2.aws_instance.my_ec2",
            "module.ec2.aws_lb_target_group.my_target_group",
            "module.ec2.aws_security_group.rdp_instance",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:024848461290:targetgroup/my-target-group/8d77041ab08d97ad-20240829231421594600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:024848461290:targetgroup/my-target-group/8d77041ab08d97ad",
            "target_id": "i-0403dbac268dbe0a6"
          },
          "dependencies": [
            "data.aws_ami.amazon-linux-2",
            "module.ec2.aws_instance.my_ec2",
            "module.ec2.aws_lb_target_group.my_target_group",
            "module.ec2.aws_security_group.rdp_instance",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rdp_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:024848461290:security-group/sg-01c0be7c4cab6e3cb",
            "description": "My security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c0be7c4cab6e3cb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "024848461290",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c486b5f49b5f51da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:024848461290:internet-gateway/igw-032c22aa58089e794",
            "id": "igw-032c22aa58089e794",
            "owner_id": "024848461290",
            "vpc_id": "vpc-0c486b5f49b5f51da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:024848461290:route-table/rtb-0255e91e31c49133c",
            "id": "rtb-0255e91e31c49133c",
            "owner_id": "024848461290",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032c22aa58089e794",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c486b5f49b5f51da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebca32146427919d",
            "route_table_id": "rtb-0255e91e31c49133c",
            "subnet_id": "subnet-01756e6eee92a3ff6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.my_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d959abca196d455",
            "route_table_id": "rtb-0255e91e31c49133c",
            "subnet_id": "subnet-00f635e8910ddbffd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.my_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:024848461290:subnet/subnet-01756e6eee92a3ff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01756e6eee92a3ff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024848461290",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c486b5f49b5f51da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:024848461290:subnet/subnet-00f635e8910ddbffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f635e8910ddbffd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024848461290",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c486b5f49b5f51da"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:024848461290:vpc/vpc-0c486b5f49b5f51da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05082e921482d86e2",
            "default_route_table_id": "rtb-0661af8f2a80d4cae",
            "default_security_group_id": "sg-0b7afe87c040d4f62",
            "dhcp_options_id": "dopt-0e6b85310697d7ea1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c486b5f49b5f51da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0661af8f2a80d4cae",
            "owner_id": "024848461290"
          }
        }
      ]
    }
  ]
}